[FIX] Dark Mode - Graphics and Modal

--- a/src/components/modal/style.module.scss
+++ b/src/components/modal/style.module.scss
@@ -6,4 +6,5 @@
   top: 16px;
   font-size: 24px;
   cursor: pointer;
+  z-index: 99999;
 }
