--- a/src/pages/event/style.module.scss
+++ b/src/pages/event/style.module.scss
@@ -139,6 +139,7 @@
 
 .building {
   width: 100%;
+  margin-bottom: -81.72px;
 }
 
 .modal {
